fix: remove right side whitespace at wide widths
add flex: 1 to .match-middle so that it will grow and shrink to fill available space

--- a/regulations/static/regulations/css/main.css
+++ b/regulations/static/regulations/css/main.css
@@ -13617,6 +13617,7 @@ aside.right-sidebar {
 }
 aside + .match-middle {
   padding: 0 32px;
+  flex: 1;
 }
 @media (max-width: 767px) {
   aside[data-state=expanded] {
