--- a/regulations/static/regulations/css/scss/_layout.scss
+++ b/regulations/static/regulations/css/scss/_layout.scss
@@ -100,6 +100,7 @@ aside {
 
     & + .match-middle {
         padding: 0 $spacer-4;
+        flex: 1;
     }
 
     &[data-state="expanded"] {
